# clickstream-data-pipeline

./: .gitignore  pyproject.toml  readme.Md  requirements.txt  start_local.sh
airflow/dags/: clickstream_etl_dag.py
clickstream_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
design/: clickstream_v11.html
etl/: etl_job.py
fastapi_app/: main.py  models.py  producer.py  requirements.txt
iam/: ecs-permissions.json  ecs-trust.json  emr-permissions.json  emr-trust.json  redshift-permissions.json  redshift-trust.json
simulator/: data_loader.py  traffic_simulator.py
spark/: spark_opensearch_test.py  spark_streaming.py
spark/conf/: spark-defaults.conf
