[project]
name = "clickstream-pipeline"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "kafka-python-ng",
    "pydantic",
    "python-dotenv",
]
simulator = [
    "locust",
    "boto3",
    "pandas",
    "requests",
]
etl = [
    "pyspark==3.4.0",
    "boto3",
    "python-dotenv",
    "psycopg2-binary",
]
orchestration = [
    "apache-airflow",
    "psycopg2-binary",
    "python-dotenv",
]

[tool.setuptools]
packages = []
